# serverless-fastapi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
api/: main.py
tests/: test_core.py
