[tool.poetry]
name = "serverless-fastapi"
version = "0.1.0"
description = ""
authors = ["Beshoy Abdelmalak <beshoyibraheem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
mangum = "^0.12.4"
requests = "^2.27.1"
uvicorn = "^0.17.4"
pytest = "^7.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
